package usuario.Contrasenia;

public interface PuedeValidar {

    public boolean validar(String contrasenia);

}
